tests/frontend/fail/array/out_of_bounds_case.act
constructor of B
interface constructor()

creates

  int[2] a := [1,2]

behaviour f of B
interface f()

case a[-1] < 0:

returns 1
